Fixes padding and template alignment issues.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body, p { font-size: 16px !important; }
 /*** mobile ***/
 @media only screen and (max-width: 767px) {
 
+    .uw-body { padding: 0; }
+
     /* top most banner nav */
     .uw-thinstrip { background: #fff; color: #4b2e83; }
     .uw-thinstrip h1 { font-size: 18px; line-height: 45px; }
@@ -64,7 +66,7 @@ body, p { font-size: 16px !important; }
 
 /* body */
 #uw-container { overflow-x: initial !important; }
-.uw-body { padding: 0; }
+.uw-body { padding-top: 0; }
 
 .uw-body .uw-accordion-menu {
     margin-bottom: 3rem;
